--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,11 +46,13 @@ services:
       - "8000:8000"
     volumes:
       - ./backend:/app
+      - /etc/localtime:/etc/localtime:ro
     environment:
       - DATABASE_URL=${DATABASE_URL}
       - SECRET_KEY=${SECRET_KEY}
       - ALGORITHM=${ALGORITHM}
       - ACCESS_TOKEN_EXPIRE_MINUTES=${ACCESS_TOKEN_EXPIRE_MINUTES}
+      - TZ=Asia/Jakarta
     depends_on:
       db:
         condition: service_healthy
