--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,7 +8,10 @@ python-multipart
 pydantic[email]
 bcrypt==3.2.0
 fastapi-limiter
+fastapi-mail
+jinja2
 redis
 pyotp
 qrcode
 Pillow
+email-validator
