--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,14 @@ services:
       - "6379:6379"
     restart: unless-stopped
 
+  mailpit:
+    image: axllent/mailpit
+    container_name: auth_mailpit
+    ports:
+      - "8025:8025" #dashboard webUI untuk mail masuk
+      - "1025:1025" # port SMTP backend kirim email
+    restart: unless-stopped
+
   backend:
     build: ./backend
     container_name: auth_backend
@@ -57,6 +65,8 @@ services:
       db:
         condition: service_healthy
       redis:
+        condition: service_started
+      mailpit:
         condition: service_started
     restart: unless-stopped
     
