feat: add avatar upload functionality with cleanup of old images

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,6 +55,7 @@ services:
     volumes:
       - ./backend:/app
       - /etc/localtime:/etc/localtime:ro
+      - ./backend/static:/app/static
     environment:
       - DATABASE_URL=${DATABASE_URL}
       - SECRET_KEY=${SECRET_KEY}
